using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class texts
{
    //Scenes
    public const string SCENE_TUTORIAL = "Tutorial";
    public const string SCENE_1 = "Scenario1";
    public const string SCENE_2 = "Scenario2";
    public const string SCENE_HUD = "HUDScene";
    //General
    public const string VERTICAL = "Vertical";
    public const string HORIZONTAL = "Horizontal";
    //Buttons
    public const string FIRE_1 = "Fire1";
    public const string FIRE_2 = "Fire2";
    public const string MOVE_UP = "";
    public const string MOVE_BOT = "";
    public const string MOVE_LEFT = "";
    public const string MOVE_RIGHT = "";
    //Animations
    public const string START = "Start";
    public const string ANIM_ATACK = "Atack";
    public const string ANIM_SHOOT = "Shoot";
    public const string ANIM_TAKEDAMAGE = "TakeDamage";
    public const string ANIM_DIE = "Die";
    public const string ANIM_ISWALKING = "isWalking";
    public const string ANIM_TAKING_DAMAGE = "TakingDamage";
    //Tags
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_PLAYER = "Player";
    public const string TAG_POINTS = "PointsCount";
    public const string TAG_SLIDERHP = "HpPlayerSlider";
    //PlayerPrefs
    public const string PP_MAXPOINTS_0_TEXT = "MaxPoints0";
    public const string PP_MAXPOINTS_1_TEXT = "MaxPoints2";
    public const string PP_MAXPOINTS_2_TEXT = "MaxPoints2";
    public const string PP_DEFAULT_POINTS_DEFAULT_VALUE = "00000";
    public const string PP_SELECTED_DIFICULTY_TEXT = "SelectedDif";
    public const int PP_SELECTED_DIFFICULTY_DEFAULT_VALUE = 0;
    public const string PP_UNLOCKED_LEVELS_TEXT = "SelectedDif";
    public const int PP_UNLOCKED_LEVELS_DEFAULT_VALUE = 0;
}


